# lconf

./: .gitignore  .gitmodules  LConf-1.4.4.tar.gz.md5  LConf.spec  Makefile.in  README  README.md  Vagrantfile  configure  configure.ac  indent.sh  install.sh  make-tarball  maketar.sh
.vagrant-puppet/manifests/: default.pp
.vagrant-puppet/modules/base/manifests/: database.pp  init.pp  packages.pp
.vagrant-puppet/modules/debmon/manifests/: init.pp
.vagrant-puppet/modules/icinga/manifests/: init.pp
.vagrant-puppet/modules/lconf_demo/manifests/: apache.pp  augeas.pp  database.pp  init.pp  packages.pp
contrib/: LConfDeploy.sh.in  LConfDeployIcinga2.sh.in  LConfSlaveExportRules.pl.in  LConfSlaveSync.init  configure_ldap_add_lconf_schema.sh  lconf-slavesync  lconf-slavesync.in
dev/schema_convert/: schema_convert.conf
dev/test/: LConfTest.pl  test.pl
dev/test/cases/: 0000_template.pl  0001_default_install_prefix.pl  0002_copyright_license_info_in_test.pl  0003_copyright_license_info_in_LConfExport.pl  1000_command.pl  1000_simple_host_and_service.ldif  1000_simple_host_and_service.pl  1001_contact.pl  1001_simple_inheritance_main_tree.ldif  1001_simple_inheritance_main_tree.pl  1002_contactgroup.pl  1002_link_below_IcingaConfig.ldif  1002_link_below_IcingaConfig.pl  1003_link_during_tree_process.ldif  1003_link_during_tree_process.pl  1003_timeperiod.pl  1004_host.ldif  1004_host.pl  1004_inherit_attributes_through_tree.ldif  1004_inherit_attributes_through_tree.pl  1005_host_inheritance_single_attribute.ldif  1005_host_inheritance_single_attribute.pl  1005_inherit_attributes_through_tree_and_overwrite.ldif  1005_inherit_attributes_through_tree_and_overwrite.pl  1006_host_inheritance_multiple_customvars.ldif  1006_host_inheritance_multiple_customvars.pl  1006_inherit_attributes_through_tree_and_overwrite_by_host_and_service_object.ldif  1006_inherit_attributes_through_tree_and_overwrite_by_host_and_service_object.pl  1007_host_overwriting_due_to_the_tree.ldif  1007_host_overwriting_due_to_the_tree.pl  1007_services_from_main_vs_services_from_template.ldif  1007_services_from_main_vs_services_from_template.pl  1008_additive_inheritance.ldif  1008_additive_inheritance.pl  1008_host_additive_inheritance.ldif  1008_host_additive_inheritance.pl  1009_host_overwriting_by_hostobject.ldif  1009_host_overwriting_by_hostobject.pl  1009_inherit_multiple_customvars.ldif  1009_inherit_multiple_customvars.pl  (+40 more)
dev/test/lib/: icingaConfigExporter.pm  icingaConfigReader.pm  testConfigExport.pm  testConfigReader.pm  testSlaveExport.pm  test_base.ldif  test_ldap.pm
doc/: CHANGELOG  Changelog  INSTALL  README.RHEL  UPGRADING  export.md  install.md  lconf.html  upgrading.md
doc/docbook/: create_doc.sh  lconf_docbook_en.xml
m4/: version.m4
source/: LConfExport.pl.in  LConfImport.pl.in  LConfSlaveExport.pl.in  LConfSlaveSync.pl.in  base.ldif.in  config.pm.in  default-templates.cfg  functions.base  functions.wizard  generate.pm.in  lconf_deploy.sh  ldap.pm.in  misc.pm.in  netways.schema  netways.schema.in
src/: LConfCleanup.pl  LConfExport.pl.in  LConfImport.pl.in  LConfSlaveExport.pl.in  LConfSlaveExportRules.pl.in  LConfSlaveSync.pl.in  base.ldif.in  config.pm.in  create_lconf-web-dn-mid.pl.in  default-templates.cfg.in  default-templates.conf.in  generate.pm.in  lconf_deploy.sh.in  ldap.pm.in  ldif_sort.pl  misc.pm.in  netways.schema.in  netways.schema.ldif.in
tools/: convertoldnew  createdb.ldif  test.conf
tools/dev/: convertoldnew  createdb  test.conf  update_schema_new  update_schema_old
tools/tmp/: .gitignore
